--- a/client/views/room.html
+++ b/client/views/room.html
@@ -15,7 +15,7 @@
 					<img class="user-avatar" src="{{avatar}}"/>
 					<span class="user-username">{{username}}</span>
 
-					<a href="/profile" id='userstats' class='button silver' title='view your stats'>profile</a>
+					<a href="/profile" id='userstats' class='button silver' title='view your stats'>profile <span class="icon-profile"></span></a>
 				</div>
 				
 				<div class='buttons-wrapper'>
