--- a/client/sass/_icons.scss
+++ b/client/sass/_icons.scss
@@ -27,9 +27,16 @@
 	margin-bottom: -.325em;
 	margin-left:.325em;
 }
-
 .icon-realtime{
 	background:url('/images/realtime.png') no-repeat;
+	background-size:100%;
+	height: 1.3em;
+	width: 1.3em;
+	margin-top: -.325em;
+	margin-bottom: -.325em;
+}
+.icon-profile{
+	background:url('/images/avatar.png') no-repeat;
 	background-size:100%;
 	height: 1.3em;
 	width: 1.3em;
