--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -22,8 +22,8 @@
 			@extend .fly-in-down;
 		}
 		.avatar{
-			height:1.8em;
-			width: 1.8em;
+			height:1.9em;
+			width: 1.9em;
 			// margin-top:.2em;
 			// margin-bottom:.2em;
 			margin-left: -1.5em;
@@ -83,7 +83,7 @@
 			opacity: 0;
 			width:auto;
 			white-space: nowrap;//for text in one line
-			left:   -.1em;
+			left:   .1em;
 			top: -2.8em;
 			background: $color-secondary;
 			color:#fff;
