--- a/client/css/main.css
+++ b/client/css/main.css
@@ -768,13 +768,18 @@ SUPER SLICK TRANSFORMS
     -ms-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+    -webkit-transition-property: transform,opacity;
+    -moz-transition-property: transform,opacity;
+    -ms-transition-property: transform,opacity;
+    -o-transition-property: transform,opacity;
+    transition-property: transform,opacity;
   }
 }
-/* line 57, ../sass/_sidebar.scss */
+/* line 62, ../sass/_sidebar.scss */
 .fixed-sidebar.show {
   z-index: 900;
   opacity: 1;
-  box-shadow: 1em 0 1em lightgrey;
+  box-shadow: none;
 }
 @media all and (max-width: 62em) {
   /* line 20, ../sass/_sidebar.scss */
@@ -782,17 +787,17 @@ SUPER SLICK TRANSFORMS
     background: url("/images/pattern-black-w.png");
   }
 }
-/* line 71, ../sass/_sidebar.scss */
+/* line 77, ../sass/_sidebar.scss */
 .fixed-sidebar:hover {
   opacity: 1;
 }
-/* line 73, ../sass/_sidebar.scss */
+/* line 79, ../sass/_sidebar.scss */
 .fixed-sidebar:hover .online-users-count {
   opacity: 1 !important;
 }
 
 @media all and (max-width: 62em) {
-  /* line 80, ../sass/_sidebar.scss */
+  /* line 86, ../sass/_sidebar.scss */
   .csstransforms .fixed-sidebar.show {
     -webkit-transform: translate3d(16em, 0, 0);
     -moz-transform: translate3d(16em, 0, 0);
@@ -803,24 +808,24 @@ SUPER SLICK TRANSFORMS
 }
 
 @media all and (max-width: 62em) {
-  /* line 92, ../sass/_sidebar.scss */
+  /* line 98, ../sass/_sidebar.scss */
   .no-csstransforms .fixed-sidebar.show {
     left: 0 !important;
   }
 }
 
-/* line 98, ../sass/_sidebar.scss */
+/* line 104, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
-/* line 100, ../sass/_sidebar.scss */
+/* line 106, ../sass/_sidebar.scss */
 .userinfo .user-avatar {
   height: 3em;
   border: 1px solid black;
   border-radius: 50%;
   overflow: hidden;
 }
-/* line 107, ../sass/_sidebar.scss */
+/* line 113, ../sass/_sidebar.scss */
 .userinfo .user-username {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -828,12 +833,12 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 115, ../sass/_sidebar.scss */
+/* line 121, ../sass/_sidebar.scss */
 .buttons-wrapper {
   text-align: center;
 }
 
-/* line 118, ../sass/_sidebar.scss */
+/* line 124, ../sass/_sidebar.scss */
 #logout, #toggleRealtime, #userstats {
   margin-left: 0.5em;
   margin-right: 0.5em;
@@ -842,24 +847,26 @@ SUPER SLICK TRANSFORMS
   border: 1px solid darkgrey;
 }
 
-/* line 135, ../sass/_sidebar.scss */
+/* line 141, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 1.5em;
+  margin-bottom: 1.5em;
   text-align: left;
   list-style-type: none;
   text-align: center;
+  overflow: hidden;
 }
-/* line 141, ../sass/_sidebar.scss */
+/* line 149, ../sass/_sidebar.scss */
 .online-users li {
   margin-left: 0;
 }
 
-/* line 145, ../sass/_sidebar.scss */
+/* line 153, ../sass/_sidebar.scss */
 .online-users-heading {
   text-align: center;
 }
 
-/* line 148, ../sass/_sidebar.scss */
+/* line 156, ../sass/_sidebar.scss */
 .online-user {
   display: inline-block;
   text-overflow: ellipsis;
@@ -868,13 +875,13 @@ SUPER SLICK TRANSFORMS
   color: #444;
 }
 
-/* line 155, ../sass/_sidebar.scss */
+/* line 163, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   margin-left: 3em !important;
 }
 
-/* line 160, ../sass/_sidebar.scss */
+/* line 168, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -882,13 +889,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 166, ../sass/_sidebar.scss */
+/* line 174, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 171, ../sass/_sidebar.scss */
+/* line 179, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -914,7 +921,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 62em) {
-  /* line 171, ../sass/_sidebar.scss */
+  /* line 179, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -923,7 +930,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 212, ../sass/_sidebar.scss */
+/* line 220, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -940,20 +947,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 62em) {
-  /* line 212, ../sass/_sidebar.scss */
+  /* line 220, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 237, ../sass/_sidebar.scss */
+/* line 245, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 246, ../sass/_sidebar.scss */
+/* line 254, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -962,20 +969,28 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 257, ../sass/_sidebar.scss */
+/* line 265, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 260, ../sass/_sidebar.scss */
+/* line 268, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 268, ../sass/_sidebar.scss */
+/* line 276, ../sass/_sidebar.scss */
 .fixed-sidebar .logo {
   position: absolute;
   top: 1.5em;
   right: 1em;
+}
+
+/* line 285, ../sass/_sidebar.scss */
+.markdown-cheatsheet {
+  margin: 5em 0;
+  padding: 2em 0;
+  display: block;
+  text-align: center;
 }
 
 /* line 1, ../sass/_messages.scss */
@@ -1629,4 +1644,281 @@ http://www.tipue.com/tipr
 /* line 38, ../sass/_tiles.scss */
 .tile a, .feature a, .stat a {
   color: #444444;
+}
+
+/**
+ * CSS Modal
+ * Modal as reusable module
+ * http://drublic.github.com/css-modal
+ *
+ * @author Hans Christian Reinl - @drublic
+ * @version 1.0.4
+ *
+ * Usage:
+ *    selector {
+ *        @extend %modal;
+ *    }
+ */
+/*
+ * Configuration
+ */
+/* line 26, ../sass/_modal.scss */
+html {
+  overflow-y: scroll;
+}
+
+/* line 30, ../sass/_modal.scss */
+.has-overlay {
+  overflow: hidden;
+}
+/* line 33, ../sass/_modal.scss */
+.has-overlay > body {
+  height: 100%;
+  overflow-y: scroll;
+}
+
+/* line 39, ../sass/_modal.scss */
+.semantic-content {
+  -webkit-transform: translate(0, 100%);
+  -moz-transform: translate(0, 100%);
+  -o-transform: translate(0, 100%);
+  -ms-transform: translate(0, 100%);
+  transform: translate(0, 100%);
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10000;
+  opacity: 0;
+  color: #222;
+  line-height: 1.3;
+  display: none\9;
+}
+/* line 63, ../sass/_modal.scss */
+.semantic-content:target {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+  opacity: 1;
+}
+/* line 77, ../sass/_modal.scss */
+.is-active.semantic-content {
+  display: block\9;
+}
+/* line 82, ../sass/_modal.scss */
+.semantic-content:target {
+  display: block\9;
+}
+/* line 88, ../sass/_modal.scss */
+.semantic-content .modal-inner {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  z-index: 20;
+  margin-left: -325px;
+  width: 650px;
+  overflow-x: hidden;
+  border-radius: 2px;
+  background: #fff;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+}
+/* line 105, ../sass/_modal.scss */
+.semantic-content .modal-inner > img,
+.semantic-content .modal-inner > video,
+.semantic-content .modal-inner > iframe {
+  width: 100%;
+  height: auto;
+  min-height: 300px;
+}
+/* line 111, ../sass/_modal.scss */
+.semantic-content .modal-inner > img {
+  width: auto;
+  max-width: 100%;
+}
+/* line 118, ../sass/_modal.scss */
+.semantic-content header {
+  border-bottom: 1px solid #dddddd;
+  padding: 0 1.2em;
+}
+/* line 122, ../sass/_modal.scss */
+.semantic-content header > h2 {
+  margin: 0.5em 0;
+}
+/* line 129, ../sass/_modal.scss */
+.semantic-content .modal-content {
+  max-height: 400px;
+  max-height: 70vh;
+  border-bottom: 1px solid #dddddd;
+  padding: 15px 1.2em;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+/* line 137, ../sass/_modal.scss */
+.semantic-content .modal-content > * {
+  max-width: 100%;
+}
+/* line 144, ../sass/_modal.scss */
+.semantic-content footer {
+  border-top: 1px solid white;
+  padding: 0 1.2em 18px;
+  background: #f0f0f0;
+  border-radius: 2px;
+}
+/* line 153, ../sass/_modal.scss */
+.semantic-content .modal-close {
+  display: block;
+  text-indent: -100px;
+  overflow: hidden;
+}
+/* line 159, ../sass/_modal.scss */
+.semantic-content .modal-close:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAEElEQVR42gEFAPr/AAAAAMwA0QDNTiUx4gAAAABJRU5ErkJggg==");
+}
+/* line 173, ../sass/_modal.scss */
+.semantic-content .modal-close:after {
+  content: '\00d7';
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  z-index: 20;
+  margin-left: 285px;
+  background: #fff;
+  border-radius: 2px;
+  padding: 2px 8px;
+  font-size: 1.2em;
+  text-decoration: none;
+  text-indent: 0;
+}
+@media screen and (max-width: 690px) {
+  /* line 195, ../sass/_modal.scss */
+  .semantic-content .modal-inner {
+    width: auto;
+    left: 20px;
+    right: 20px;
+    margin-left: 0;
+  }
+  /* line 202, ../sass/_modal.scss */
+  .semantic-content .modal-close {
+    margin-right: 0;
+  }
+  /* line 207, ../sass/_modal.scss */
+  .semantic-content .modal-close:after {
+    margin-left: auto;
+    right: 1em;
+  }
+}
+@media screen and (max-width: 30em) {
+  /* line 39, ../sass/_modal.scss */
+  .semantic-content {
+    -webkit-transform: translate(0, 400px);
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    -webkit-transition: -webkit-transform .25s ease-in-out, opacity 1ms .25s;
+    -moz-transition: -moz-transform .25s ease-in-out, opacity 1ms .25s;
+    -o-transition: -o-transform .25s ease-in-out, opacity 1ms .25s;
+    -ms-transition: -ms-transform .25s ease-in-out, opacity 1ms .25s;
+    transition: transform .25s ease-in-out, opacity 1ms .25s;
+    display: block;
+    height: 100%;
+    bottom: auto;
+  }
+  /* line 231, ../sass/_modal.scss */
+  .semantic-content:target {
+    -webkit-transition: -webkit-transform .25s ease-in-out;
+    -moz-transition: -moz-transform .25s ease-in-out;
+    -o-transition: -o-transform .25s ease-in-out;
+    -ms-transition: -ms-transform .25s ease-in-out;
+    transition: transform .25s ease-in-out;
+  }
+  /* line 239, ../sass/_modal.scss */
+  .semantic-content:before {
+    background-color: #27aae2;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#27aae2), to(#1c9cd3));
+    background-image: -webkit-linear-gradient(top, #27aae2, #1c9cd3);
+    background-image: -moz-linear-gradient(top, #27aae2, #1c9cd3);
+    background-image: -o-linear-gradient(top, #27aae2, #1c9cd3);
+    background-image: linear-gradient(to bottom, #27aae2, #1c9cd3);
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 30;
+    height: 3em;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  }
+  /* line 258, ../sass/_modal.scss */
+  .semantic-content .modal-inner {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-top: 3em;
+    height: 100%;
+    overflow: scroll;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  /* line 273, ../sass/_modal.scss */
+  .semantic-content .modal-content {
+    max-height: none;
+  }
+  /* line 277, ../sass/_modal.scss */
+  .semantic-content .modal-close {
+    right: auto;
+    text-decoration: none;
+  }
+  /* line 281, ../sass/_modal.scss */
+  .semantic-content .modal-close:before {
+    display: none;
+  }
+  /* line 285, ../sass/_modal.scss */
+  .semantic-content .modal-close:after {
+    content: attr(data-close);
+    top: 0.4em;
+    left: 1em;
+    z-index: 40;
+    margin-left: 0;
+    font-size: 1em;
+    padding: 0.5em 1em;
+  }
+}
+@media screen and (max-height: 46em) and (min-width: 30em) {
+  /* line 299, ../sass/_modal.scss */
+  .semantic-content .modal-content {
+    max-height: 340px;
+    max-height: 50vh;
+  }
+}
+@media screen and (max-height: 36em) and (min-width: 30em) {
+  /* line 306, ../sass/_modal.scss */
+  .semantic-content .modal-content {
+    max-height: 265px;
+    max-height: 40vh;
+  }
+}
+
+@media screen and (min-width: 30em) {
+  /* line 315, ../sass/_modal.scss */
+  .semantic-content {
+    -webkit-transition: opacity 0.4s;
+    -o-transition: opacity 0.4s;
+    transition: opacity 0.4s;
+  }
 }
