--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -139,12 +139,12 @@
 
 
 .online-users{
-	margin-top: 1.5em;
-	margin-bottom: 1.5em;
+	margin: 2em auto;
 	text-align: left;
 	list-style-type: none;
 	text-align: center;
-	overflow: hidden;
+	overflow-y: auto;
+	height:10em;
 	
 	li{
 		margin-left: 0;
