--- a/client/views/room.html
+++ b/client/views/room.html
@@ -75,7 +75,8 @@
 				Emphasis, aka italics, with *asterisks* or _underscores_. <br/>
 				Strong emphasis, aka bold, with **asterisks** or __underscores__. <br/>
 				Combined emphasis with **asterisks and _underscores_**. <br/>
-				Strikethrough uses two tildes. ~~Scratch this.~~
+				Strikethrough uses two tildes. ~~Scratch this.~~ <br>
+				Horizontal lines are created with three dashes ---
 				
 				<h4>Lists</h4>
 				<small>currently only unordered lists are supported</small>
@@ -102,5 +103,6 @@
 	    </div>
 	    <a href="#!" class="modal-close" title="Close" data-close="Close"
 	        data-dismiss="modal">×</a>
+
 	</section>
 </template>
