--- a/client/sass/_welcome.scss
+++ b/client/sass/_welcome.scss
@@ -133,8 +133,10 @@ $offset-y:-400px;
 	padding: 3em 2em!important;
 	margin:auto!important;
 	color:#666;
+	text-align: center;
 }
 	.tos{
+		text-align: left;
 		margin:4em auto;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
