markdown cheatsheet template

--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -6,7 +6,7 @@
 			<img src="/images/logo_even_white.svg" class='logo-welcome'/>
 			<h6>No signup required</h6>
 			<h6>Simple and uncluttered UI</h6>
-			<h6>Markdown support? hell yeah</h6>
+			<h6><a href="#mdc-modal">Markdown</a> support? hell yeah</h6>
 			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' target='_blank' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
 		</div>
 	</div>
@@ -19,7 +19,7 @@
 				<div class="vam">
 					<img src="/images/realtime.png">
 					<h6>Chatting</h6>
-					<span>has never been so realtime</span>
+					<span>see what other users are typing in realtime</span>
 				</div>
 			</div>
 			<div class="feature">
@@ -46,7 +46,7 @@
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/speech-bubble.png">
-					<h6>Markdown</h6>
+					<h6><a href="#mdc-modal">Markdown</a></h6>
 					<span>if you're into that thing</span>
 				</div>
 			</div>
@@ -84,4 +84,6 @@
 		<br/>
 		<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
 	</aside>
+
+	{{>markdownCheatsheet}}
 </template>
