barebone toggle users

--- a/client/views/room.html
+++ b/client/views/room.html
@@ -32,12 +32,12 @@
 					<li class='online-users-heading'>
 						{{onlineUsersCount}} online
 					</li>
-					{{#each onlineUsers}}
-						<li class='online-user-wrapper'><span class="status-badge {{status}}"></span><span class='online-user' data-userid='{{userid}}'>{{nickname}}</span></li>
-					{{/each}}
 				{{else}}
 					<li>:( nobody is online right now</li>
 				{{/if}}
+				{{#constant}}
+					<li id="append-online-user-here"></li>
+				{{/constant}}
 			</ul>
 		{{/isolate}}
 
