--- a/client/sass/_tiles.scss
+++ b/client/sass/_tiles.scss
@@ -19,7 +19,7 @@
 			padding:2em;
 			float:left;
 			text-align: center;
-			border:2px solid white;
+			// border:2px solid white;
 			height:15em;
 
 			@media all and(max-width: $limit + 10em){
