--- a/client/views/room.html
+++ b/client/views/room.html
@@ -45,7 +45,7 @@
 	</aside>
 	<div class="main">
 
-		<div class="loading">One sec, fetching your messages..</div>
+		<!-- <div class="loading">One sec, fetching your messages..</div> -->
 		
 		{{>messages}}
 		
