--- a/client/css/main.css
+++ b/client/css/main.css
@@ -634,16 +634,27 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 130, ../sass/_welcome.scss */
+/* line 129, ../sass/_welcome.scss */
+.features-header {
+  text-align: center;
+  font-size: 4em;
+}
+
+/* line 135, ../sass/_welcome.scss */
 .footer {
+  background: white;
   overflow: hidden;
   padding: 3em 2em !important;
   margin: auto !important;
   color: #666;
   text-align: center;
 }
+/* line 142, ../sass/_welcome.scss */
+.footer .footer-wrapper {
+  margin-top: 0 !important;
+}
 
-/* line 138, ../sass/_welcome.scss */
+/* line 147, ../sass/_welcome.scss */
 .tos {
   text-align: left;
   margin: 4em auto;
@@ -652,7 +663,7 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 1, ../sass/_room.scss */
-.main, .footer {
+.main, .footer .footer-wrapper {
   z-index: 126;
   margin: 6em auto 0.5em;
   max-width: 31em;
@@ -662,13 +673,13 @@ SUPER SLICK TRANSFORMS
 }
 @media all and (max-width: 32em) {
   /* line 1, ../sass/_room.scss */
-  .main, .footer {
+  .main, .footer .footer-wrapper {
     width: 93%;
     margin-right: .5em;
   }
 }
 /* line 27, ../sass/_room.scss */
-.main.under-modal, .under-modal.footer {
+.main.under-modal, .footer .under-modal.footer-wrapper {
   opacity: 0.3;
 }
 
@@ -877,14 +888,19 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
   color: #444;
 }
-
 /* line 165, ../sass/_sidebar.scss */
+.online-user.strike {
+  text-decoration: line-through;
+  opacity: .3;
+}
+
+/* line 171, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   margin-left: 3em !important;
 }
 
-/* line 170, ../sass/_sidebar.scss */
+/* line 176, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -892,13 +908,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 176, ../sass/_sidebar.scss */
+/* line 182, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 181, ../sass/_sidebar.scss */
+/* line 187, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -924,7 +940,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 62em) {
-  /* line 181, ../sass/_sidebar.scss */
+  /* line 187, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -933,7 +949,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 222, ../sass/_sidebar.scss */
+/* line 228, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -950,20 +966,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 62em) {
-  /* line 222, ../sass/_sidebar.scss */
+  /* line 228, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 247, ../sass/_sidebar.scss */
+/* line 253, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 256, ../sass/_sidebar.scss */
+/* line 262, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -972,23 +988,23 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 267, ../sass/_sidebar.scss */
+/* line 273, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 270, ../sass/_sidebar.scss */
+/* line 276, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 278, ../sass/_sidebar.scss */
+/* line 284, ../sass/_sidebar.scss */
 .fixed-sidebar .logo {
   position: absolute;
   top: 1.5em;
   right: 1em;
 }
 
-/* line 287, ../sass/_sidebar.scss */
+/* line 293, ../sass/_sidebar.scss */
 .markdown-cheatsheet {
   margin: 5em 0;
   padding: 2em 0;
@@ -1170,61 +1186,68 @@ code {
   overflow-y: hidden;
 }
 
+/* line 191, ../sass/_messages.scss */
+#first, #last {
+  border: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
 @-webkit-keyframes realtime-anim {
-  /* line 192, ../sass/_messages.scss */
+  /* line 198, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 193, ../sass/_messages.scss */
+  /* line 199, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 196, ../sass/_messages.scss */
+  /* line 202, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 197, ../sass/_messages.scss */
+  /* line 203, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 200, ../sass/_messages.scss */
+  /* line 206, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 201, ../sass/_messages.scss */
+  /* line 207, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 204, ../sass/_messages.scss */
+  /* line 210, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 205, ../sass/_messages.scss */
+  /* line 211, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 208, ../sass/_messages.scss */
+  /* line 214, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 209, ../sass/_messages.scss */
+  /* line 215, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
@@ -1626,7 +1649,6 @@ http://www.tipue.com/tipr
   padding: 2em;
   float: left;
   text-align: center;
-  border: 2px solid white;
   height: 15em;
 }
 @media all and (max-width: 42em) {
@@ -1924,4 +1946,18 @@ html {
     -o-transition: opacity 0.4s;
     transition: opacity 0.4s;
   }
+}
+
+/* line 1, ../sass/_todo.scss */
+.todos {
+  background: #F0F0F0;
+  overflow: hidden;
+  width: 100%;
+}
+
+/* line 6, ../sass/_todo.scss */
+.todos-wrapper {
+  margin: 5em auto;
+  max-width: 32em;
+  padding: 2em;
 }
