--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -4,10 +4,11 @@
 			<h1 style='font-size: 3.5em;'>OpenTalk</h1>
 			<h1>The <b>real</b> realtime chat</h1>
 			<img src="/images/logo_even_white.svg" class='logo-welcome'/>
+			<h6>No app to install</h6>
 			<h6>No signup required</h6>
 			<h6>Simple and uncluttered UI</h6>
 			<h6><a href="#mdc-modal">Markdown</a> support? hell yeah</h6>
-			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' target='_blank' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
+			<h6>Uh! I almost forgot: it's <a style='color:#222;' target='_blank' href="https://github.com/christian-fei/opentalk.me">opensource</a></h6>
 		</div>
 	</div>
 	<div class="blanket medium-text">
@@ -15,6 +16,7 @@
 	</div>
 	<div class="features">
 		<div class="features-wrapper">
+			<h1 class='features-header'>Features</h1>
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/realtime.png">
@@ -59,31 +61,54 @@
 			</div>
 		</div>
 	</div>
-	<aside class="footer">
-		<div class="tos">
-			<h6>ToS</h6>
+	<div class="todos">
+		<div class="todos-wrapper">
+			<h4>Things on the to-do list</h4>
 			<ul>
-				<li>don't be a jerk.</li>
-				<li>you visit a public chatroom at your own risk</li>
-				<li>don't be a jerk.</li>
-				<li>all content despite being hosted openly is subject to copyright of Christian Fei</li>
-				<li>don't be a jerk.</li>
-				<li>the source is free for personal/private use, it cannot be used for commercial purposes</li>
-				<li>don't be a jerk.</li>
-				<li>I cannot be held reliable in any way for anything that happened on this web service. fu</li>
-				<li>don't be a jerk.</li>
+				<li>More stats</li>
+				<li>Let users delete their messages</li>
+				<li>Enhanced Markdown support</li>
+				<li>Code highlighting?</li>
+				<li>Implement notification system logic</li>
+				<li>Tagging of chatrooms</li>
 			</ul>
 			<br>
-			<p>tl;dr</p>
-			<p>don't be a jerk.</p>
+			Do you want to contribute or have a suggestion to make this better?	<a href="https://github.com/christian-fei/opentalk.me">Fork away!</a>
 		</div>
-		<br/>
+	</div>
+	<footer class="footer">
+		<div class="footer-wrapper">
+			<div class="tos">
+				<h6>ToS</h6>
+				<ul>
+					<li>don't be a jerk.</li>
+					<li>you visit a public chatroom at your own risk</li>
+					<li>don't be a jerk.</li>
+					<li>all content despite being hosted openly is subject to copyright of Christian Fei</li>
+					<li>don't be a jerk.</li>
+					<li>the source is free for personal/private use, it cannot be used for commercial purposes</li>
+					<li>don't be a jerk.</li>
+					<li>I cannot be held reliable in any way for anything that happened on this web service. fu</li>
+					<li>don't be a jerk.</li>
+					<li>It <b>is</b> possible that messages get deleted without notice</li>
+					<li>don't be a jerk.</li>
+				</ul>
+				<br>
+				<p>tl;dr</p>
+				<p>don't be a jerk.</p>
+			</div>
+			<br/>
 
-		<p>Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a></p>	
+			<p>
+				Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a>
+				<br>
+				proudly hosted on <a href="https://www.digitalocean.com/?refcode=880e8f681b50" target='_blank'>DigitalOcean</a>
+			</p>	
 
-		<br/>
-		<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
-	</aside>
-
+			<br/>
+			<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
+			
+		</div>
+	</footer>
 	{{>markdownCheatsheet}}
 </template>
