--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -51,6 +51,10 @@
 				</div>
 			</div>
 		</div>
+
+		<ul class="user-rooms">
+			<li id="append-here"></li>
+		</ul>
 	{{else}}
 		<div class="profile-mast">
 			<div class="profile-mast-cont">
