--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -65,9 +65,9 @@
 		<div class="todos-wrapper">
 			<h4>Things on the to-do list</h4>
 			<ul>
-				<li>More stats</li>
+				<li>Enhanced <a href="/profile">profile page</a></li>
 				<li>Let users delete their messages</li>
-				<li>Enhanced Markdown support</li>
+				<li><strike>Better <a href="#mdc-modal">Markdown</a> support</strike></li>
 				<li>Code highlighting?</li>
 				<li>Implement notification system logic</li>
 				<li>Tagging of chatrooms</li>
