removing rooms before adding new ones

--- a/client/sass/_tiles.scss
+++ b/client/sass/_tiles.scss
@@ -4,6 +4,10 @@
 	float:left; //or overflow:hidden
 	padding: 2em;
 }
+	.tiles-header{
+		text-align: center;
+		font-size: 4em;
+	}
 	.tiles-wrapper{
 		max-width: $limit + 10em;
 		margin:auto;
