--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -15,6 +15,7 @@
 		</div>
 
 		<div class="stats">
+			<h1 class="stats-header">Your stats</h1>
 			<div class="stats-wrapper">
 				<div class="stat">
 					<div class="vam">
