--- a/client/css/main.css
+++ b/client/css/main.css
@@ -634,13 +634,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 129, ../sass/_welcome.scss */
-.features-header {
-  text-align: center;
-  font-size: 4em;
-}
-
-/* line 135, ../sass/_welcome.scss */
+/* line 133, ../sass/_welcome.scss */
 .footer {
   background: white;
   overflow: hidden;
@@ -649,12 +643,12 @@ SUPER SLICK TRANSFORMS
   color: #666;
   text-align: center;
 }
-/* line 142, ../sass/_welcome.scss */
+/* line 140, ../sass/_welcome.scss */
 .footer .footer-wrapper {
   margin-top: 0 !important;
 }
 
-/* line 147, ../sass/_welcome.scss */
+/* line 145, ../sass/_welcome.scss */
 .tos {
   text-align: left;
   margin: 4em auto;
@@ -1625,7 +1619,7 @@ http://www.tipue.com/tipr
   height: 13em;
 }
 
-/* line 45, ../sass/_profile.scss */
+/* line 47, ../sass/_profile.scss */
 .user-rooms {
   margin: 2em auto;
   max-width: 32em;
@@ -1635,11 +1629,11 @@ http://www.tipue.com/tipr
   list-style-type: none;
 }
 
-/* line 54, ../sass/_profile.scss */
+/* line 56, ../sass/_profile.scss */
 .user-room {
   display: inline-block;
 }
-/* line 56, ../sass/_profile.scss */
+/* line 58, ../sass/_profile.scss */
 .user-room a {
   padding: .7em 1.4em;
   margin: 0.7em;
@@ -1659,12 +1653,18 @@ http://www.tipue.com/tipr
 }
 
 /* line 7, ../sass/_tiles.scss */
+.tiles-header, .features-header, .stats-header {
+  text-align: center;
+  font-size: 4em;
+}
+
+/* line 11, ../sass/_tiles.scss */
 .tiles-wrapper, .features-wrapper, .stats-wrapper {
   max-width: 42em;
   margin: auto;
 }
 
-/* line 11, ../sass/_tiles.scss */
+/* line 15, ../sass/_tiles.scss */
 .tile, .feature, .stat {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
@@ -1677,21 +1677,21 @@ http://www.tipue.com/tipr
   height: 15em;
 }
 @media all and (max-width: 42em) {
-  /* line 11, ../sass/_tiles.scss */
+  /* line 15, ../sass/_tiles.scss */
   .tile, .feature, .stat {
     width: 50%;
   }
 }
-/* line 29, ../sass/_tiles.scss */
+/* line 33, ../sass/_tiles.scss */
 .tile h6, .feature h6, .stat h6 {
   font-size: 1.2em;
 }
-/* line 33, ../sass/_tiles.scss */
+/* line 37, ../sass/_tiles.scss */
 .tile img, .feature img, .stat img {
   width: 2em;
   height: 2em;
 }
-/* line 38, ../sass/_tiles.scss */
+/* line 42, ../sass/_tiles.scss */
 .tile a, .feature a, .stat a {
   color: #444444;
 }
